修复 URL 构造函数弃用警告
- 使用 URI.create().toURL() 替代 new URL()
- 消除编译时弃用警告